--- a/index.html
+++ b/index.html
@@ -3,8 +3,47 @@
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
     <title>ArduiTank | Accueil</title>
-    <meta name='viewport' content='width=device-width, initial-scale=1'>
+    <meta itemprop="name" content="ArduiTank | Accueil" />
+
+	<link rel="apple-touch-icon" type="image/png" sizes="180x180" href="./img/banner.png" class="next-head">
+	<link rel="icon" type="image/png" sizes="32x32" href="./img/banner.png" class="next-head">
+	<link rel="icon" type="image/png" sizes="16x16" href="./img/banner.png" class="next-head">
+
+	<link rel="canonical" href="https://arduitank.be" />
+	<link rel="shortlink" href="https://arduitank.be" />
+
+	<meta name="viewport" content="width=device-width, initial-scale=1" class="next-head">
+	<meta name="description" content="Bienvenue sur le site d'ArduiTank. Equipe de projet pour char robotisé et télécommandé." class="next-head">
+
+	<meta property="og:title" content="ArduiTank | Accueil" class="next-head"/>
+	<meta property="og:site_name" content="ArduiTank | Accueil" class="next-head" />
+	<meta property="og:type" content="website" class="next-head" />
+	<meta property="og:url" content="https://arduitank.be" class="next-head" />
+	<meta property="og:description" content="Bienvenue sur le site d'ArduiTank. Equipe de projet pour char robotisé et télécommandé.">
+	<meta property="og:image" content="https://arduitank.be/img/banner.png" class="next-head">
+
+	<meta name="twitter:card" content="summary_large_image" class="next-head" />
+	<meta name="twitter:title" content="ArduiTank | Accueil" class="next-head" />
+	<meta name="twitter:url" content="https://arduitank.be" />
+	<meta name="twitter:description" content="Bienvenue sur le site d'ArduiTank. Equipe de projet pour char robotisé et télécommandé." class="next-head">
+	<meta name="twitter:creator" content="@ArduiTank" class="next-head">
+	<meta name="twitter:image:src" content="https://arduitank.be/img/banner.png" class="next-head">
+
+	<meta name="dcterms.title" content="ArduiTank | Accueil" class="next-head" />
+	<meta name="dcterms.type" content="Text" class="next-head" />
+	<meta name="dcterms.format" content="text/html" class="next-head" />
+	<meta name="dcterms.identifier" content="https://arduitank.be" class="next-head" />
+	<meta name="dcterms.description" content="Bienvenue sur le site d'ArduiTank. Equipe de projet pour char robotisé et télécommandé." class="next-head">
+	
+	<!-- Bulma Version 0.7.4-->
+	<link rel="stylesheet" href="https://unpkg.com/bulma@0.7.4/css/bulma.min.css" />
+	<link rel="stylesheet" href="https://unpkg.com/bulma-modal-fx/dist/css/modal-fx.min.css" />
+
+	<!-- Fonts | Emotes -->
+	<script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
 </head>
 <body>
     
