--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 <div class="container">
                     <div class="navbar-brand">
                         <a class="navbar-item" href="./">
-                            <img src="./img/banner.png" width="50" style="max-height: initial; border-radius: 50%;">
+                            <img src="./img/banner.png" width="50" style="max-height: 100%; border-radius: 50%;">
                         </a>
             
                         <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
