--- a/index.html
+++ b/index.html
@@ -44,6 +44,16 @@
 
 	<!-- Fonts | Emotes -->
 	<script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
+
+    <style>
+        .background-banner {
+            background-image: url(https://arduitank.be/img/banner.png);
+			background-size: cover;
+			width: 100%;
+			background-position: 0;
+			transition: opacity 1.25s ease, transform 1s ease;
+        }
+    </style>
 </head>
 <body>
     <section class="hero is-dark is-fullheight">
@@ -109,13 +119,33 @@
             </nav>
         </div>
     
+        <div class="hero-body background-banner">
+            <div class="container has-text-centered">
+                <p class="title">
+                    ArduiTank
+                </p>
+            </div>
+        </div>
         <div class="hero-body">
             <div class="container has-text-centered">
                 <p class="title">
                   Title
                 </p>
+            </div>
+            <div class="container has-text-centered">
+                <p class="title">
+                  Title2
+                </p>
                 <p class="subtitle">
-                  Subtitle
+                  Subtitle2
+                </p>
+            </div>
+            <div class="container has-text-centered">
+                <p class="title">
+                  Title3
+                </p>
+                <p class="subtitle">
+                  Subtitle3
                 </p>
             </div>
         </div>    
