--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
     <style>
         .background-banner {
-            background-image: url(https://arduitank.be/img/banner.png);
+            background-image: url(http://arduitank.be/img/banner.png);
 			background-size: cover;
 			width: 100%;
 			background-position: 0;
