--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
     
         <div class="hero-body background-banner">
             <div class="container has-text-centered">
-                <p class="title">
+                <p class="title is-dark">
                     ArduiTank
                 </p>
             </div>
