--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                                 Équipe
                             </a>
                             <a class="navbar-item" href="./#actu">
-                                Actualité
+                                Actualités
                             </a>
                             <a class="navbar-item" href="./#galerie">
                                 Galerie
@@ -121,7 +121,7 @@
     
         <div class="hero-body background-banner">
             <div class="container has-text-centered">
-                <p class="title is-dark">
+                <p class="title is-large" style="color: hsl(0, 0%, 21%)!important;">
                     ArduiTank
                 </p>
             </div>
