--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
     
         <div class="hero-body background-banner">
             <div class="container has-text-centered">
-                <p class="title is-large" style="color: hsl(0, 0%, 21%)!important;">
+                <p class="title content is-large" style="color: hsl(0, 0%, 21%)!important;">
                     ArduiTank
                 </p>
             </div>
