--- a/index.html
+++ b/index.html
@@ -53,6 +53,19 @@
 			background-position: 0;
 			transition: opacity 1.25s ease, transform 1s ease;
         }
+
+        /* Scrollbar */
+		::-webkit-scrollbar {
+			width: 10px;
+		}
+
+		::-webkit-scrollbar-track {
+			background: #f5f5f5; 
+		}
+
+		::-webkit-scrollbar-thumb {
+			background: #363636; 
+		}
     </style>
 </head>
 <body>
