--- a/index.html
+++ b/index.html
@@ -132,35 +132,37 @@
             </nav>
         </div>
     
-        <div class="hero-body background-banner">
-            <div class="container has-text-centered">
-                <p class="title" style="color: hsl(0, 0%, 21%)!important; font-size: 5rem;">
-                    ArduiTank
-                </p>
-            </div>
-        </div>
         <div class="hero-body">
-            <div class="container has-text-centered">
-                <p class="title">
-                  Title
-                </p>
-            </div>
-            <div class="container has-text-centered">
-                <p class="title">
-                  Title2
-                </p>
-                <p class="subtitle">
-                  Subtitle2
-                </p>
-            </div>
-            <div class="container has-text-centered">
-                <p class="title">
-                  Title3
-                </p>
-                <p class="subtitle">
-                  Subtitle3
-                </p>
-            </div>
+            <section class="background-banner">
+                <div class="container has-text-centered">
+                    <p class="title" style="color: hsl(0, 0%, 21%)!important; font-size: 5rem;">
+                        ArduiTank
+                    </p>
+                </div>
+            </section>
+            <section class="background-banner">
+                <div class="container has-text-centered">
+                    <p class="title">
+                      Title
+                    </p>
+                </div>
+                <div class="container has-text-centered">
+                    <p class="title">
+                      Title2
+                    </p>
+                    <p class="subtitle">
+                      Subtitle2
+                    </p>
+                </div>
+                <div class="container has-text-centered">
+                    <p class="title">
+                      Title3
+                    </p>
+                    <p class="subtitle">
+                      Subtitle3
+                    </p>
+                </div>
+            </section>
         </div>
     </section>
     
