--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr" style="overflow-y: auto;">
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
@@ -134,14 +134,14 @@
     
         <div class="hero-body background-banner">
             <div class="container has-text-centered">
-                <p class="title" style="color: hsl(0, 0%, 21%)!important; font-size: 5rem;">
+                <p class="title" style="color: hsl(0, 0%, 21%)!important; font-size: 5rem; padding: 10rem 0 10rem 0;">
                     ArduiTank
                 </p>
             </div>
         </div>
         <div class="hero-body">
             <div class="container">
-                <p class="title has-text-centered">
+                <p class="title has-text-centered" id="information">
                   Information
                 </p>
                 <div class="content is-large">
