--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
             </nav>
         </div>
     
-        <div class="hero-body background-banner" style="transition: opacity 1.25s ease, transform 1s ease;">
+        <div class="hero-body background-banner" style="transition-property: opacity, left, top, height;">
             <div class="container has-text-centered">
                 <p class="title" style="color: hsl(0, 0%, 21%)!important; font-size: 5rem; padding: 10rem 0 10rem 0;">
                     ArduiTank
