--- a/index.html
+++ b/index.html
@@ -143,6 +143,7 @@
                 </p>
             </div>
         </div>
+
         <div class="hero-body">
             <div class="container">
                 <p class="title has-text-centered" id="information">
@@ -162,27 +163,66 @@
                 </div>
             </div>
         </div>
+
+        <div class="hero-body background-banner" style="padding: 10rem 0 10rem 0;">
+        </div>
+        
         <div class="hero-body">
-            <div class="container has-text-centered">
-                <p class="title">
-                  Title
+            <div class="container">
+                <p class="title has-text-centered" id="information">
+                  Equipe
                 </p>
-            </div>
-            <div class="container has-text-centered">
-                <p class="title">
-                  Title2
-                </p>
-                <p class="subtitle">
-                  Subtitle2
-                </p>
-            </div>
-            <div class="container has-text-centered">
-                <p class="title">
-                  Title3
-                </p>
-                <p class="subtitle">
-                  Subtitle3
-                </p>
+                <center>
+					<hr class="has-background-dark" style="width: 100px; height: 3px;">
+				</center>
+				<br/>
+				<br/>
+				<div class="columns">
+					<div class="column">
+						<center style="margin-bottom: 1rem;">
+							<figure class="image is-64x64">
+								<img src="https://cdn.discordapp.com/avatars/484726990344028162/6269c54783100b73676ba7f7634f7505.png" class="image is-64x64 is-rounded">
+							</figure>
+							<br/>
+							<p class="title is-5" style="font-weight: normal;">
+								Davide
+							</p>
+						</center>
+					</div>
+					<div class="column">
+						<center style="margin-bottom: 1rem;">
+							<figure class="image is-64x64">
+								<img src="https://cdn.discordapp.com/avatars/693118212711251968/78931dd3534414a3cd6520dca925d1eb.png" class="image is-64x64 is-rounded">
+							</figure>
+							<br/>
+							<p class="title is-5" style="font-weight: normal;">
+								Ugo
+							</p>
+						</center>
+					</div>
+                    <div class="column">
+						<center style="margin-bottom: 1rem;">
+							<figure class="image is-64x64">
+								<img src="https://cdn.discordapp.com/avatars/474326204808298506/09dd121b2c1881ceae6bdc56cddfc47f.png" class="image is-64x64 is-rounded">
+							</figure>
+							<br/>
+							<p class="title is-5" style="font-weight: normal;">
+								Antonin
+							</p>
+						</center>
+					</div>
+                    <div class="column">
+						<center style="margin-bottom: 1rem;">
+							<figure class="image is-64x64">
+								<img src="https://cdn.discordapp.com/avatars/673832628021100574/fdf203b53f00217309ba0009cd6bdf54.png" class="image is-64x64 is-rounded">
+							</figure>
+							<br/>
+							<p class="title is-5" style="font-weight: normal;">
+								Colin
+							</p>
+						</center>
+					</div>
+				</div>
             </div>
         </div>
     </section>
