--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
         <div class="hero-body background-banner" style="padding: 10rem 0 10rem 0;">
         </div>
         
-        <div class="hero-body">
+        <div class="hero-body" id="equipe">
             <div class="container">
                 <p class="title has-text-centered" id="information">
                   Equipe
