--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <title>ArduiTank | Accueil</title>
     <meta itemprop="name" content="ArduiTank | Accueil" />
 
-	<link rel="apple-touch-icon" type="image/png" sizes="180x180" href="./img/banner.png" class="next-head">
-	<link rel="icon" type="image/png" sizes="32x32" href="./img/banner.png" class="next-head">
-	<link rel="icon" type="image/png" sizes="16x16" href="./img/banner.png" class="next-head">
+	<link rel="apple-touch-icon" type="image/png" sizes="180x180" href="./img/logo V2.2.png" class="next-head">
+	<link rel="icon" type="image/png" sizes="32x32" href="./img/logo V2.2.png" class="next-head">
+	<link rel="icon" type="image/png" sizes="16x16" href="./img/logo V2.2.png" class="next-head">
 
 	<link rel="canonical" href="https://arduitank.be" />
 	<link rel="shortlink" href="https://arduitank.be" />
@@ -79,7 +79,7 @@
                 <div class="container">
                     <div class="navbar-brand">
                         <a class="navbar-item" href="./">
-                            <img src="./img/banner.png" width="50" style="max-height: 100%; border-radius: 50%;">
+                            <img src="./img/logo V2.2.png" width="50" style="max-height: 100%; border-radius: 50%;">
                         </a>
             
                         <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
