--- a/index.html
+++ b/index.html
@@ -137,10 +137,13 @@
         </div>
     
         <div class="hero-body background-banner">
-            <div class="container has-text-centered">
+            <!--<div class="container has-text-centered">
                 <p class="title" style="color: hsl(0, 0%, 21%)!important; font-size: 5rem; padding: 10rem 0 10rem 0;">
                     ArduiTank
                 </p>
+            </div>-->
+            <div class="container">
+                <img src="./img/logo V2.2.png">
             </div>
         </div>
 
