--- a/index.html
+++ b/index.html
@@ -143,7 +143,9 @@
                 </p>
             </div>-->
             <div class="container">
-                <img src="./img/logo V2.2.png">
+                <center>
+                    <img src="./img/logo V2.2.png">
+                </center>
             </div>
         </div>
 
