--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                 <p class="title has-text-centered" id="information">
                   Information
                 </p>
-                <div class="content is-large">
+                <div class="content is-large is-white">
                     <h1>Hello World</h1>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla accumsan, metus ultrices eleifend gravida, nulla nunc varius lectus, nec rutrum justo nibh eu lectus. Ut vulputate semper dui. Fusce erat odio, sollicitudin vel erat vel, interdum mattis neque.</p>
                     <h2>Second level</h2>
