--- a/index.html
+++ b/index.html
@@ -154,10 +154,10 @@
                 <p class="title has-text-centered" id="information">
                   Information
                 </p>
-                <div class="content is-large is-white">
-                    <h1>Hello World</h1>
+                <div class="content is-large">
+                    <h1 class="is-white">Hello World</h1>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla accumsan, metus ultrices eleifend gravida, nulla nunc varius lectus, nec rutrum justo nibh eu lectus. Ut vulputate semper dui. Fusce erat odio, sollicitudin vel erat vel, interdum mattis neque.</p>
-                    <h2>Second level</h2>
+                    <h2 class="is-white">Second level</h2>
                     <p>Curabitur accumsan turpis pharetra <strong>augue tincidunt</strong> blandit. Quisque condimentum maximus mi, sit amet commodo arcu rutrum id. Proin pretium urna vel cursus venenatis. Suspendisse potenti. Etiam mattis sem rhoncus lacus dapibus facilisis. Donec at dignissim dui. Ut et neque nisl.</p>
                     <ul>
                       <li>In fermentum leo eu lectus mollis, quis dictum mi aliquet.</li>
