--- a/index.html
+++ b/index.html
@@ -66,6 +66,34 @@
 			background: #363636; 
 		}
 
+		/* Button Up */
+		#scroll_to_top {
+			display: none;
+			position: fixed;
+			bottom: 50px;
+			right: 30px;
+			z-index: 99;
+			font-size: 18px;
+			border: none;
+			outline: none;
+			background-color: rgba(255, 255, 255, 0.5);
+			color: white;
+			cursor: pointer;
+			padding: 5px;
+			border-radius: 4px;
+		}
+
+		#scroll_to_top button {
+			width: 25px;
+		}
+
+		#scroll_to_top:hover {
+			background-color: rgba(255, 255, 255, 0.8);
+		}
+
+
+
+
 		div {
 			transition-property: opacity, left, top, height;
 			transition-duration: 3s, 5s;
