--- a/index.html
+++ b/index.html
@@ -348,7 +348,11 @@
 			</div>
 		</div>
 	</section>
-	
+
+	<button onclick="topFunction()" id="scroll_to_top" title="Go to top">
+		<i class="fas fa-arrow-circle-up" alt="Retourner en haut" style="width: 40px; height: 40px;">		
+		</i>
+	</button>
 
 	<!-- Script Navbar --> 
 	<script type="text/javascript">
@@ -376,6 +380,29 @@
 				});
 			}
 		});
+	</script>
+
+	<!-- Script scroll to top -->
+	<script>
+		//Get the button
+		var mybutton = document.getElementById("scroll_to_top");
+
+		// When the user scrolls down 20px from the top of the document, show the button
+		window.onscroll = function() {scrollFunction()};
+
+		function scrollFunction() {
+			if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
+				mybutton.style.display = "block";
+			} else {
+				mybutton.style.display = "none";
+			}
+		}
+
+		// When the user clicks on the button, scroll to the top of the document
+		function topFunction() {
+			document.body.scrollTop = 0;
+			document.documentElement.scrollTop = 0;
+		}
 	</script>
 </body>
 </html>
