--- a/index.html
+++ b/index.html
@@ -423,6 +423,14 @@
 		});
 	</script>
 
+	<!-- Script collapse for accordion -->
+	<script>
+		var myCollapse = document.getElementById('myCollapse')
+		var bsCollapse = new bootstrap.Collapse(myCollapse, {
+			toggle: false
+		})
+	</script>
+
 	<!-- Script scroll to top -->
 	<script>
 		//Get the button
