--- a/index.html
+++ b/index.html
@@ -425,7 +425,7 @@
 
 	<!-- Script collapse for accordion -->
 	<script>
-		var myCollapse = document.getElementById('myCollapse')
+		var myCollapse = document.getElementById('accordionExample')
 		var bsCollapse = new bootstrap.Collapse(myCollapse, {
 			toggle: false
 		})
