--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
 				<p class="title has-text-centered" id="information">
 				  Actualités
 				</p>
-				<div class="accordion" id="accordionExample">
+				<div class="accordion has-background-white" id="accordionExample">
 					<div class="accordion-item">
 						<h2 class="accordion-header" id="headingOne">
 							<button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
@@ -304,18 +304,6 @@
 							</div>
 						</div>
 					</div>
-				</div>
-				<div class="content is-large">
-					<h1 class="is-white">Hello World</h1>
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla accumsan, metus ultrices eleifend gravida, nulla nunc varius lectus, nec rutrum justo nibh eu lectus. Ut vulputate semper dui. Fusce erat odio, sollicitudin vel erat vel, interdum mattis neque.</p>
-					<h2 class="is-white">Second level</h2>
-					<p>Curabitur accumsan turpis pharetra <strong>augue tincidunt</strong> blandit. Quisque condimentum maximus mi, sit amet commodo arcu rutrum id. Proin pretium urna vel cursus venenatis. Suspendisse potenti. Etiam mattis sem rhoncus lacus dapibus facilisis. Donec at dignissim dui. Ut et neque nisl.</p>
-					<ul>
-						<li>In fermentum leo eu lectus mollis, quis dictum mi aliquet.</li>
-						<li>Morbi eu nulla lobortis, lobortis est in, fringilla felis.</li>
-						<li>Aliquam nec felis in sapien venenatis viverra fermentum nec lectus.</li>
-						<li>Ut non enim metus.</li>
-					</ul>
 				</div>
 			</div>
 		</div>
