--- a/index.html
+++ b/index.html
@@ -197,6 +197,7 @@
 						<li>Ut non enim metus.</li>
 					</ul>
 				</div>
+				<progress class="progress" value="15" max="100">15%</progress>
 			</div>
 		</div>
 
