--- a/index.html
+++ b/index.html
@@ -410,6 +410,9 @@
 
 	<!-- Script for accordion -->
 	<script type="text/javascript" src="/node_modules/bulma-accordion/dist/js/bulma-accordion.min.js"></script>
+	<script>
+		var accordions = bulmaAccordion.attach();
+	</script>
 
 	<!-- Script scroll to top -->
 	<script>
