--- a/index.html
+++ b/index.html
@@ -409,7 +409,7 @@
 	</script>
 
 	<!-- Script for accordion -->
-	<script type="text/javascript" src="/node_modules/bulma-accordion/dist/js/bulma-accordion.min.js"></script>
+	<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/bulma-accordion@2.0.1/dist/js/bulma-accordion.min.js"></script>
 	<script>
 		var accordions = bulmaAccordion.attach();
 	</script>
