--- a/index.html
+++ b/index.html
@@ -411,7 +411,7 @@
 	<!-- Script for accordion -->
 	<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/bulma-accordion@2.0.1/dist/js/bulma-accordion.min.js"></script>
 	<script>
-		var accordions = bulmaAccordion.attach();
+		bulmaAccordion.attach();
 	</script>
 
 	<!-- Script scroll to top -->
