--- a/index.html
+++ b/index.html
@@ -302,6 +302,50 @@
 						</div>
 					</article>
 				</section>
+				<div id="accordion_first">
+					<article class="message">
+						<div class="message-header">
+							<p>Question 1 <a href="#collapsible-message-accordion-1" data-action="collapse">Collapse/Expand</a></p>
+						</div>
+						<div id="collapsible-message-accordion-1" class="message-body is-collapsible" data-parent="accordion_first">
+							<div class="message-body-content">
+								Lorem ipsum dolor sit amet, consectetur adipiscing elit. <strong>Pellentesque risus mi</strong>, tempus quis
+								placerat ut, porta nec nulla. Vestibulum rhoncus ac ex sit amet fringilla. Nullam gravida purus diam, et dictum
+								<a>felis venenatis</a> efficitur. Aenean ac <em>eleifend lacus</em>, in mollis lectus. Donec sodales, arcu et
+								sollicitudin porttitor, tortor urna tempor ligula, id porttitor mi magna a neque. Donec dui urna, vehicula et
+								sem eget, facilisis sodales sem.
+							</div>
+						</div>
+					</article>
+					<article class="message">
+						<div class="message-header">
+							<p>Question 2 <a href="#collapsible-message-accordion-2" data-action="collapse">Collapse/Expand</a></p>
+						</div>
+						<div id="collapsible-message-accordion-2" class="message-body is-collapsible" data-parent="accordion_first">
+							<div class="message-body-content">
+								Lorem ipsum dolor sit amet, consectetur adipiscing elit. <strong>Pellentesque risus mi</strong>, tempus quis
+								placerat ut, porta nec nulla. Vestibulum rhoncus ac ex sit amet fringilla. Nullam gravida purus diam, et dictum
+								<a>felis venenatis</a> efficitur. Aenean ac <em>eleifend lacus</em>, in mollis lectus. Donec sodales, arcu et
+								sollicitudin porttitor, tortor urna tempor ligula, id porttitor mi magna a neque. Donec dui urna, vehicula et
+								sem eget, facilisis sodales sem.
+							</div>
+						</div>
+					</article>
+					<article class="message">
+						<div class="message-header">
+							<p>Question 3 <a href="#collapsible-message-accordion-3" data-action="collapse">Collapse/Expand</a></p>
+						</div>
+						<div id="collapsible-message-accordion-3" class="message-body is-collapsible" data-parent="accordion_first">
+							<div class="message-body-content">
+								Lorem ipsum dolor sit amet, consectetur adipiscing elit. <strong>Pellentesque risus mi</strong>, tempus quis
+								placerat ut, porta nec nulla. Vestibulum rhoncus ac ex sit amet fringilla. Nullam gravida purus diam, et dictum
+								<a>felis venenatis</a> efficitur. Aenean ac <em>eleifend lacus</em>, in mollis lectus. Donec sodales, arcu et
+								sollicitudin porttitor, tortor urna tempor ligula, id porttitor mi magna a neque. Donec dui urna, vehicula et
+								sem eget, facilisis sodales sem.
+							</div>
+						</div>
+					</article>
+				</div>
 			</div>
 		</div>
 
