--- a/index.html
+++ b/index.html
@@ -302,12 +302,12 @@
 						</div>
 					</article>
 				</section>
-				<div id="accordion_first">
+				<div id="to-collapse">
 					<article class="message">
 						<div class="message-header">
 							<p>Question 1 <a href="#collapsible-message-accordion-1" data-action="collapse">Collapse/Expand</a></p>
 						</div>
-						<div id="collapsible-message-accordion-1" class="message-body is-collapsible" data-parent="accordion_first">
+						<div id="collapsible-message-accordion-1" class="message-body is-collapsible" data-parent="to-collapse">
 							<div class="message-body-content">
 								Lorem ipsum dolor sit amet, consectetur adipiscing elit. <strong>Pellentesque risus mi</strong>, tempus quis
 								placerat ut, porta nec nulla. Vestibulum rhoncus ac ex sit amet fringilla. Nullam gravida purus diam, et dictum
@@ -321,7 +321,7 @@
 						<div class="message-header">
 							<p>Question 2 <a href="#collapsible-message-accordion-2" data-action="collapse">Collapse/Expand</a></p>
 						</div>
-						<div id="collapsible-message-accordion-2" class="message-body is-collapsible" data-parent="accordion_first">
+						<div id="collapsible-message-accordion-2" class="message-body is-collapsible" data-parent="to-collapse">
 							<div class="message-body-content">
 								Lorem ipsum dolor sit amet, consectetur adipiscing elit. <strong>Pellentesque risus mi</strong>, tempus quis
 								placerat ut, porta nec nulla. Vestibulum rhoncus ac ex sit amet fringilla. Nullam gravida purus diam, et dictum
@@ -335,7 +335,7 @@
 						<div class="message-header">
 							<p>Question 3 <a href="#collapsible-message-accordion-3" data-action="collapse">Collapse/Expand</a></p>
 						</div>
-						<div id="collapsible-message-accordion-3" class="message-body is-collapsible" data-parent="accordion_first">
+						<div id="collapsible-message-accordion-3" class="message-body is-collapsible" data-parent="to-collapse">
 							<div class="message-body-content">
 								Lorem ipsum dolor sit amet, consectetur adipiscing elit. <strong>Pellentesque risus mi</strong>, tempus quis
 								placerat ut, porta nec nulla. Vestibulum rhoncus ac ex sit amet fringilla. Nullam gravida purus diam, et dictum
